syntax = "proto3";
package mediacorral.server.v1;

message VideoExtendedMetadata {
  repeated ChapterInfo chapter_info = 1;
}

message ChapterInfo {
  uint32 chapter_number = 1;
  uint64 chapter_uid = 2;
  uint64 chapter_start = 3;
  uint64 chapter_end = 4;
  string chapter_name = 5;
}
